# ShadowLend

./: .gitignore  ARCHITECTURE.md  Anchor.toml  Cargo.toml  DEPLOYMENT.md  README.md
app/: package-lock.json  package.json
app/public/idl/: shadow_lend.json
app/src/app/: globals.css  layout.tsx  page.tsx
app/src/app/dashboard/: page.tsx
app/src/app/docs/: page.tsx
app/src/app/lend/: page.tsx
app/src/app/position/: page.tsx
app/src/components/dashboard/: PositionOverview.tsx  ProtocolStats.tsx  QuickActions.tsx  index.ts
app/src/components/landing/: FeaturesSection.tsx  HeroSection.tsx  HowItWorksSection.tsx  index.ts
app/src/components/layout/: Footer.tsx  Header.tsx  Navbar.tsx
app/src/components/lend/: LendingForm.tsx  PoolInfo.tsx  index.ts
app/src/components/providers/: WalletProvider.tsx
app/src/components/ui/: AnimatedTabs.tsx  Button.tsx  Card.tsx  EncryptedText.tsx  HealthGauge.tsx  HealthIndicator.tsx  Input.tsx  PrivacyBadge.tsx  Skeleton.tsx  StatCard.tsx  Toaster.tsx  index.ts
app/src/hooks/: index.ts  useLending.ts  usePool.ts  usePosition.ts  useProgram.ts
app/src/lib/: constants.ts  encryption.ts  program.ts
app/src/providers/: WalletProvider.tsx
app/src/types/: program.ts
programs/shadow-lend/: Cargo.toml
programs/shadow-lend/src/: lib.rs
