[package]
name = "shadow-lend"
version = "0.1.0"
description = "Confidential Lending Protocol on Solana with Inco Lightning"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "shadow_lend"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.29.0"
